--- a/src/ui/DataGrid/css/index.scss
+++ b/src/ui/DataGrid/css/index.scss
@@ -30,7 +30,7 @@
     font-weight: 800;
     position: sticky;
     top: 0;
-    background-color: black;
+    background-color: lightgray;
     color: white;
     padding: 10px;
   }
